# LifeOS

./: .env.example  .gitignore  .prettierignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PHASE6_CLOSEOUT.md  README.md  SECURITY.md  commitlint.config.js  community-modules.json  docker-compose.yml  eslint.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  ruff.toml  tsconfig.json  tsconfig.modules.json  tsconfig.packages.json  {}
.changeset/: home-state-minor.md  household-calendar-minor.md  household-capture-router-minor.md  household-chores-minor.md  household-identity-minor.md  household-shopping-minor.md
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.husky/: commit-msg  pre-commit
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/.cargo/: config.toml
apps/desktop/src-tauri/src/: lib.rs  main.rs  sidecar.rs
apps/desktop/src-tauri/src/commands/: capture.rs  goal.rs  graph.rs  inbox.rs  marketplace.rs  mod.rs  modules.rs  review.rs  settings.rs  trust.rs
config/: defaults.yaml  local.example.yaml  nats-server.conf  otel-collector.yaml
docs/: CONTRIBUTING.md  README.md  SETUP.md  troubleshooting.md
scripts/: build-modules.ts  cli-smoke-hero-loop.ts  generate-release-evidence.ts  init-postgres.sh  init-secrets.sh  install-rust-deps.ps1  module-loader-check.ts  provision-nats-identities.sh  register-traycer-backup-task.ps1  ruff-task.ts  scaffold.ts  test-core-loop.ts  test-runner-entry.ts  test-runner.ts  traycer-state-backup.ps1  (+2 more)
(+604 files in other folders)
