[package]
name = "lifeos-desktop"
version = "0.4.0"
edition = "2021"

[lib]
name = "lifeos_desktop"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.0", features = [] }
dirs = "6"
